--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 	--positive-colour: rgb(0, 255, 125);
 	--negative-colour: rgb(255, 0, 65);
 
-	touch-action: none;
+	touch-action: manipulation;
 }
 
 * {
@@ -70,6 +70,10 @@ input[type="file"] {
 }
 
 .button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
 	background-color: var(--background);
 	color: #aaa;
 	padding: 6px 12px;
