--- a/index.css
+++ b/index.css
@@ -150,6 +150,9 @@ input[type="file"] {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
 }
 
 #open {
