--- a/index.css
+++ b/index.css
@@ -19,6 +19,8 @@ html {
 	font-family: montserrat, sans-serif;
 	font-size: 16pt;
 	color: var(--text-colour);
+
+	touch-action: manipulation;
 }
 
 body {
