--- a/index.css
+++ b/index.css
@@ -27,6 +27,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+
+	overflow: hidden;
 }
 
 input[type="file"] {
@@ -174,6 +176,7 @@ input[type="file"] {
 	pointer-events: none;
 
 }
+
 
 
 
